tests/rgs/syntax_errors/and_no_right_operand.rgs
STORY quest PRIORITY 1.
    ACTION run.
    EVENT spotted ENVIRONMENT.
    CONDITION tired MYSELF.
    PHASE active.
    AGENT Hero:
        DURING active:
            WHEN spotted ENVIRONMENT IF tired MYSELF AND:
                DO run.
